@@ -91,10 +91,6 @@ wm_env['BUILDERS']['ProtocolBuffer'] = proto_builder
 wm_env.ParseConfig('pkg-config --cflags --libs gdk-2.0 libpcrecpp ' +
                    'xcb x11-xcb xcb-composite xcb-randr xcb-shape xcb-damage')
 
-breakpad_path = '../../third_party/google-breakpad/files/src/client/linux'
-wm_env['CPPPATH'].append(breakpad_path)
-wm_env['LIBPATH'].append(breakpad_path)
-
 if os.system('pkg-config clutter-1.0') == 0:
   wm_env.ParseConfig('pkg-config --cflags --libs clutter-1.0')
 else:
@@ -151,7 +147,10 @@ srcs = Split('''\
 ''')
 libtest = wm_env.Library('test', Split(srcs))
 
-wm_env['LIBS'] += [libwm_core, libwm_ipc, 'libbreakpad']
+wm_env['LIBS'] += [libwm_core, libwm_ipc]
+if 'USE_BREAKPAD' in ARGUMENTS:
+  wm_env['LIBS'].append('libbreakpad')
+  wm_env['CPPFLAGS'] = '-DUSE_BREAKPAD'
 
 wm_env.Program('wm', 'main.cc')
 
