@@ -6,7 +6,7 @@ Source: chromeos-wm
 Section: unknown
 Priority: extra
 Maintainer: The Chromium OS Authors <chromium-os-dev@googlegroups.com>
-Build-Depends: debhelper (>= 7.3.0), dh-chromeos, protobuf-compiler, libgflags-dev, libprotobuf-dev, libx11-dev, libgtk2.0-dev, libxcb1-dev, libx11-xcb-dev, libxcb-composite0-dev, libxcb-randr0-dev, libxcb-shape0-dev, libxcb-damage0-dev, libclutter-1.0-dev, libgtest-dev, libgtkmm-2.4-dev, libpcre3-dev
+Build-Depends: debhelper (>= 7.3.0), dh-chromeos, protobuf-compiler, libgflags-dev, libprotobuf-dev, libx11-dev, libgtk2.0-dev, libxcb1-dev, libx11-xcb-dev, libxcb-composite0-dev, libxcb-randr0-dev, libxcb-shape0-dev, libxcb-damage0-dev, libclutter-1.0-dev, libgtest-dev, libgtkmm-2.4-dev, libpcre3-dev, libbreakpad-dev [i386 amd64]
 Standards-Version: 3.8.0
 
 Package: chromeos-wm
